Fixed issue with advanced search buttons on Firefox

--- a/less/joomla.less
+++ b/less/joomla.less
@@ -693,6 +693,10 @@
 			margin-top: 0;
 		}
 	}
+	
+	.btn {
+		padding: 0 20px!important;
+	}
 }
 
 .filter-branch {
